# wol-rs

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md  deny.toml
.github/workflows/: ci.yml
src/: lib.rs  main.rs
tests/: cli.rs
